- add manifest.json for using app as PWA - add favicon and app icon - add meta tag with theme color in index.html - another attempt at fixing overscroll on ios

--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,13 @@
   box-sizing: border-box;
 }
 
-body {
-  margin: auto;
+html {
   overscroll-behavior: none;
+}
+
+body {
+  overscroll-behavior: none;
+  margin: auto;
   background: rgb(255, 140, 0);
   background: linear-gradient(
     0deg,
